[project]
name = "broadway-direct-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "html5lib>=1.1",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
